Work on Proposal Introduction

--- a/dissertation/propbody.tex
+++ b/dissertation/propbody.tex
@@ -1,4 +1,7 @@
 
+\documentstyle[12pt,a4]{article}
+\begin{document}
+
 % Draft #1 (final?)
 
 \vfil
@@ -7,11 +10,11 @@
 \vspace{0.4in}
 \centerline{\Large How to write a dissertation in \LaTeX\ }
 \vspace{0.4in}
-\centerline{\large M. Richards, St John's College}
+\centerline{\large D. Brazdil, Trinity Hall}
 \vspace{0.3in}
-\centerline{\large Originator: Dr M. Richards}
+\centerline{\large Originator: Dr A. R. Beresford}
 \vspace{0.3in}
-\centerline{\large 21 November 2000}
+\centerline{\large 10 October 2012}
 
 \vfil
 
@@ -23,16 +26,16 @@ The use of my own IBM PC (1000GHz Pentium, 200Mb RAM and 40Gb Disk).
 \vspace{0.2in}
 
 \noindent
-{\bf Project Supervisor:} Dr M. Richards
+{\bf Project Supervisor:} Dr A. R.	 Beresford
 \vspace{0.2in}
 
 \noindent
-{\bf Director of Studies:} Dr M. Richards
+{\bf Director of Studies:} Dr S. W. Moore
 \vspace{0.2in}
 \noindent
  
 \noindent
-{\bf Project Overseers:} Dr~F.~H.~King  \& Dr~S.~W.~Moore
+{\bf Project Overseers:} Prof~J.~M.~Bacon  \& Prof~R.~J.~Anderson
 
 \vfil
 \pagebreak
@@ -129,3 +132,4 @@ the dissertation including a bibliography using bibtex and a table of contents.
 The estimated completion date being 25/07/2001 to allow 
 plenty of time should any unforeseen problems arise.
 
+\end{document}
