--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -27,7 +27,8 @@
 
 \centerline{\large Computer Science Tripos Part II Project Proposal}
 \vspace{0.4in}
-\centerline{\Large\bf Taint-Based Flow Tracing through}
+\centerline{\Large\bf Taint-Based Flow Tracing by}
+\vspace{0.1in}
 \centerline{\Large\bf Bytecode Instrumentation on Android}
 \vspace{0.3in}
 \cleanlookdateon
@@ -35,11 +36,11 @@
 
 \vfil
 
-{\bf Project Originator:} Dr A. R. Beresford
+{\bf Project Originator:} \emph{Dr A. R. Beresford}
 
-\vspace{0.1in}
-
-{\bf Resources Required:} See attached Project Resource Form
+%\vspace{0.1in}
+%
+%{\bf Resources Required:} See attached Project Resource Form
 
 \vspace{0.5in}
 
@@ -74,7 +75,8 @@ Android is a popular, open-source Linux-based platform for touchscreen
 mobile devices, such as smartphones and tablets. Ever since its unveiling 
 in 2007, it has been increasing its market share, running on 68.1\% of 
 smartphones sold in the second quarter of 2012 according to a report by 
-IDC. \cite{www.idc.com/getdoc.jsp?containerId=prUS23638712}
+the International Data Corporation. 
+\cite{www.idc.com/getdoc.jsp?containerId=prUS23638712}
 
 Unfortunately, with its growing popularity, the platform became a frequent
 target of increasingly sophisticated malware, masquerading as legitimate
@@ -87,8 +89,8 @@ Researchers have been coming up with different approaches to solving
 this problem, mostly focusing on porting well-established methods from
 the desktop environment to resource-limited devices running Android and
 other competing mobile operating systems. These methods range from 
-lightweight static or dynamic analysis of the executable code, all the way
-to enforcing sandboxing by virtualization. 
+lightweight static analysis of the executable code, all the way to 
+enforcing sandboxing by virtualization. 
 
 Following the work conducted by a group of researchers from 
 The Pennsylvania State University, Duke University and Intel Labs, 
