--- a/dissertation/proposal.tex
+++ b/dissertation/proposal.tex
@@ -118,7 +118,7 @@ to store and propagate the taint transparently to the applications
 running on top of it. The same will be accomplished by extracting the
 executable code from the application's package and instrumenting it
 to carry out the information-flow analysis itself, without any
-modifications to the platform being necessary.
+modifications to the platform needed.
 
 limitations of both solutions
 
